;;
;; django-canopy package
;;
[metadata]
name = django-canopy
version = 0.2.0-pre.1
description = Request form generator
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Emencia
author_email = support@emencia.com
url = https://github.com/emencia/django-canopy
project_urls =
    Source Code = https://github.com/emencia/django-canopy
    Issue Tracker = https://github.com/emencia/django-canopy/issues
    Changelog = https://django-canopy.readthedocs.io/en/latest/history.html
    Documentation = https://django-canopy.readthedocs.io/
license = MIT
keywords = Python,Django,django-cms
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2

[options]
include_package_data = True
install_requires =
    Django>=4.0,<5.0
packages = find:
zip_safe = True

[options.extras_require]
cms =
    django-cms>=3.11.0,<4.0
    djangocms-text-ckeditor>=5.0.1
dev =
    pytest
    pytest-django
    factory-boy
    pyquery
    freezegun
quality =
    flake8
    tox
doc =
    sphinx
    furo==2023.7.26
    sphinx-copybutton==0.5.2
doc-live =
    livereload
release =
    twine

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py{310}-django{40,42}-cms{311}

[testenv]

deps =
    django40: Django>=3.2,<4.1
    django42: Django>=4.2,<5.0
    cms311: django-cms>=3.11.0,<4.0

commands =
    pip install -e .[dev]
    pytest -vv tests
