;;
;; django-canopy package
;;
[metadata]
name = django-canopy
version = 0.3.1-pre.2
description = Request form generator
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Emencia
author_email = support@emencia.com
url = https://github.com/emencia/django-canopy
project_urls =
    Source Code = https://github.com/emencia/django-canopy
    Issue Tracker = https://github.com/emencia/django-canopy/issues
    Changelog = https://django-canopy.readthedocs.io/en/latest/history.html
    Documentation = https://django-canopy.readthedocs.io/
license = MIT
keywords = Python,Django,forms
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2

[options]
include_package_data = True
install_requires =
    Django>=4.0,<5.0
    django-admin-sortable2>=2.2.4
    django-crispy-forms>=2.3
    crispy-bootstrap5>=2024.10
    pydantic>=2.10.0
packages = find:
zip_safe = True

[options.extras_require]
sandbox =
    diskette>=0.3.6
    django-debug-toolbar>=4.4.0
dev =
    pytest>=7.0.0
    pytest-django>=4.0.0
    factory-boy>=3.3.0
    pyquery>=2.0.0
    freezegun>=1.2.0
quality =
    flake8>=6.0.0
    tox>=4.11.0
doc =
    sphinx>=8.0.2
    furo>=2024.8.6
    sphinx-copybutton>=0.5.2
doc-live =
    livereload>=2.7.0
release =
    twine>=5.0.0

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py{310}-django{40,42}

[testenv]

deps =
    django40: Django>=3.2,<4.1
    django42: Django>=4.2,<5.0

commands =
    pip install -e .[dev]
    pytest -vv tests
